[package]
name = "Spacepix"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = "0.14.0"
json = "0.12.4"
reqwest = { version = "0.13.2", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.51.1", features = ["full"] }
try = "1.0.0"

